2006-12-05 Made the default Artist._transform None (rather than
           invoking identity_transform for each artist only to have it
           overridden later).  Use artist.get_transform() rather than
           artist._transform, even in derived classes, so that the
           default transform will be created lazily as needed - JDH

2006-12-03 Added LogNorm to colors.py as illustrated by
           examples/pcolor_log.py, based on suggestion by
           Jim McDonald.  Colorbar modified to handle LogNorm.
           Norms have additional "inverse" method. - EF

2006-12-02 Changed class names in colors.py to match convention:
           normalize -> Normalize, no_norm -> NoNorm.  Old names
           are still available.
           Changed __init__.py rc defaults to match those in
           matplotlibrc - EF

2006-11-22 Fixed bug in set_*lim that I had introduced on 11-15 - EF

2006-11-22 Added examples/clippedline.py, which shows how to clip line
           data based on view limits -- it also changes the marker
           style when zoomed in - JDH

2006-11-21 Some spy bug-fixes and added precision arg per Robert C's
           suggestion  - JDH

2006-11-19 Added semi-automatic docstring generation detailing all the
           kwargs that functions take using the artist introspection
           tools; eg 'help text now details the scatter kwargs
           that control the Text properties  - JDH

2006-11-17 Removed obsolete scatter_classic, leaving a stub to
           raise NotImplementedError; same for pcolor_classic - EF

2006-11-15 Removed obsolete pcolor_classic - EF

2006-11-15 Fixed 1588908 reported by Russel Owen; factored
           nonsingular method out of ticker.py, put it into
           transforms.py as a function, and used it in
           set_xlim and set_ylim. - EF

2006-11-14 Applied patch 1591716 by Ulf Larssen to fix a bug in
           apply_aspect.  Modified and applied patch
           1594894 by mdehoon to fix bugs and improve